package Basics.PaymentSystem;

public interface PaymentStrategy {
    public void pay(float amount);
}
