package ParkingLot.Version1;

public class BikeType implements VehicleType {
    public double getHourlyRate() {
        return 10;
    }

    public String getTypeName() {
        return "BIKE";
    }
}


