package ParkingLot.Version1;

public class CarType implements VehicleType {
    public double getHourlyRate() {
        return 20;
    }

    public String getTypeName() {
        return "CAR";
    }
}

