package ParkingLot.Version1;

public interface VehicleType {
    double getHourlyRate();
    String getTypeName();
}
